# game

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  GAME_MECHANICS_DOCUMENTATION.md  Procfile  docker-compose.sqlite.yml  docker-compose.yml  main.py  migrate_sqlite_to_postgresql.py  migrate_to_postgresql.py  prompts.txt  pyproject.toml  requirements.txt  setup_postgresql.py
app/: pyproject.toml  requirements.txt
app/auth/: auth.py
app/config/: settings.py
app/database/: connection.py  postgresql.py
app/game/: security.py  stages.py  utils.py  workflow.py
app/models/: game_state.py  schemas.py  tournament.py
app/routes/: auth.py  game.py  stats.py  tournament.py  user.py
app/utils/: helpers.py
ui/: package-lock.json  package.json
ui/src/: App.jsx  App_new.jsx  App_old.jsx  index.css
ui/src/components/common/: CyberpunkButton.jsx  CyberpunkCard.jsx  Header.jsx  Layout.jsx  Navigation.jsx  ProtectedRoute.jsx
ui/src/components/tournament/: CreateTournament.jsx  JoinTournament.jsx  TournamentGame.jsx  TournamentLobby.jsx
ui/src/hooks/: useAuth.jsx
ui/src/pages/: DashboardPage.jsx  GamePage.jsx  LeaderboardPage.jsx  LoginPage.jsx  ProfilePage.jsx  TournamentPage.jsx
ui/src/utils/: animations.js  api.js  auth.js
